fixed thing where title card overflowed on phone

--- a/styles.CSS
+++ b/styles.CSS
@@ -13,13 +13,17 @@ body {
     z-index: 100;
     left: 50%;
     transform: translateX(-50%);  
-    /* width: 100vw; */
-    overflow-x: hidden;
+    width: 100vw;
+    overflow: hidden;
     max-width: 700px;
     min-width: 320px;
     /* height: 95vh;   */
     /* height: -webkit-fill-available; */
-    object-fit: fill;
+    object-fit: cover;
+}
+
+#titlecard > img {
+    max-width: 100vw;
 }
 
 .fadeout { 
@@ -336,8 +340,8 @@ input:focus, textarea {
 }  
 
 #userinput {
-    width: 280px;
-    min-width: 155px;
+    /* width: 280px; */
+    min-width: 230px;
     padding: 5px;
     -webkit-appearance: none;
     appearance: auto;
